Remove per-release highlights for Pike
We've been warning that these are deprecated for awhile now, and
we now have enforcement in place to make sure no new highlights
are added.

We also have some automation that rewrites the deliverable files
but does not always do a great job, resulting in poorly formatted
text that causes warnings in the validation job.

Since many folks new to the release process, and some that have
done it for awhile, look at existing files to see what to do for
new releases, they do assume highlights should be used and end up
adding them to their deliverable file. Since most of these also
do not know to run local validatation, this results in gate
resources being used to just now be rejected with the current
checks.

To help prevent this from happening, and to get rid of the warning
messages from poor reformatting, this just removes highlights
from the last few releases.

Change-Id: Ie0b0e241c38f84bbc7b1ef5b09e97dc8ec466b39

--- a/deliverables/pike/futurist.yaml
+++ b/deliverables/pike/futurist.yaml
@@ -15,8 +15,7 @@ releases:
       - hash: 68557fec45d095e859d4829c526392cf9dff796b
         repo: openstack/futurist
     version: 0.23.0
-  - highlights: 'Stable enough to release 1.0.0'
-    projects:
+  - projects:
       - hash: b8759972cbe9bd1ab2203c81a26805730d5a0178
         repo: openstack/futurist
     version: 1.0.0
