--- a/deliverables/ocata/os-cloud-config.yaml
+++ b/deliverables/ocata/os-cloud-config.yaml
@@ -7,6 +7,7 @@ repository-settings:
   openstack/os-cloud-config:
     flags:
       - no-artifact-build-job
+      - retired
 branches:
   - name: stable/ocata
     location: 6.0.0.0rc1
@@ -23,9 +24,6 @@ releases:
     projects:
       - repo: openstack/os-cloud-config
         hash: 8cbab5ceeeae52363ea8c5188b8a0604cc420e34
-    highlights: >
-      - os-cloud-config is now deprecated, and we plan to remove this project
-        in Pike.
   - version: 6.0.0
     diff-start: 5.0.0
     projects:
