--- a/deliverables/queens/shade.yaml
+++ b/deliverables/queens/shade.yaml
@@ -34,6 +34,10 @@ releases:
       - hash: d8d0fca288b5da8f27096e474ff6b52095fa69cb
         repo: openstack-infra/shade
     version: 1.26.0
+  - projects:
+      - hash: e0e8841a6ded197dfdac08720694c04fbcc0403d
+        repo: openstack-infra/shade
+    version: 1.27.0
 branches:
   - name: stable/queens
     location: 1.26.0
