set the pypi-name for dragonflow
Change-Id: Idf480cc0d0a1494b288c8b1c1bbfef03ecc28f36
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/_independent/dragonflow.yaml
+++ b/deliverables/_independent/dragonflow.yaml
@@ -21,3 +21,6 @@ releases:
     projects:
       - repo: openstack/dragonflow
         hash: de74522e808a30cc8080c01a7a16ec7c9afafdff
+repository-settings:
+  openstack/dragonflow:
+    pypi-name: DragonFlow
