Revert "Switch openstack-tox-validate to non-voting temporarily"
This reverts commit 31c476e2c8f988e7a9ff0cead2e302a890a702b6.

Change-Id: Ib20df8d25fe80c21e8e46cc5718a46bb1078c267

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -7,8 +7,7 @@
 - project:
     check:
       jobs:
-        - openstack-tox-validate:
-            voting: false
+        - openstack-tox-validate
         - releases-tox-list-changes
         - build-openstack-sphinx-docs:
             vars:
@@ -16,6 +15,7 @@
 
     gate:
       jobs:
+        - openstack-tox-validate
         - build-openstack-sphinx-docs:
             vars:
               sphinx_python: python3
