fix schema validation issues for icehouse
This change was generated with:

sed -i -e 's|version: \(.*\)|version: "\1"|g' deliverables/*/*.yaml

Change-Id: I2374e46ac5b7091fdcf20127043894e8b6b8ec8a
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/icehouse/ceilometer.yaml
+++ b/deliverables/icehouse/ceilometer.yaml
@@ -4,7 +4,7 @@ team: Telemetry
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.1
+  - version: "2014.1"
     projects:
       - repo: openstack/ceilometer
         hash: 1bbf17650f9d94a22256f356abf84cc71c831f1f
