--- a/deliverables/icehouse/cinder.yaml
+++ b/deliverables/icehouse/cinder.yaml
@@ -4,7 +4,7 @@ team: cinder
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.1
+  - version: "2014.1"
     projects:
       - repo: openstack/cinder
         hash: d507b600927e230e71673fa9b4f7974d69668ee7
