--- a/deliverables/icehouse/glance.yaml
+++ b/deliverables/icehouse/glance.yaml
@@ -4,7 +4,7 @@ team: glance
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.1
+  - version: "2014.1"
     projects:
       - repo: openstack/glance
         hash: abf2dd8ee8ea116205d661e57f8dda6627e2f5c1
