--- a/deliverables/icehouse/heat.yaml
+++ b/deliverables/icehouse/heat.yaml
@@ -4,7 +4,7 @@ team: heat
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.1
+  - version: "2014.1"
     projects:
       - repo: openstack/heat
         hash: ec3a0c61393ee4b1ad33f79da256e0a510281ded
