--- a/deliverables/icehouse/horizon.yaml
+++ b/deliverables/icehouse/horizon.yaml
@@ -4,7 +4,7 @@ team: horizon
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.1
+  - version: "2014.1"
     projects:
       - repo: openstack/horizon
         hash: 1b0106e2804a45e641433c4bd459e6bed85521c3
