--- a/deliverables/icehouse/keystone.yaml
+++ b/deliverables/icehouse/keystone.yaml
@@ -4,7 +4,7 @@ team: keystone
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.1
+  - version: "2014.1"
     projects:
       - repo: openstack/keystone
         hash: b07840a0532ef92fda8dc00c99059ec96a98c564
