--- a/deliverables/icehouse/neutron.yaml
+++ b/deliverables/icehouse/neutron.yaml
@@ -4,7 +4,7 @@ team: neutron
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.1
+  - version: "2014.1"
     projects:
       - repo: openstack/neutron
         hash: 288432e3d1ea3a53d24644b8dbd545c815485351
