--- a/deliverables/icehouse/nova.yaml
+++ b/deliverables/icehouse/nova.yaml
@@ -4,7 +4,7 @@ team: nova
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.1
+  - version: "2014.1"
     projects:
       - repo: openstack/nova
         hash: 87f57c0a2cc00a70edc87c5dc10bdefb6c01587b
