--- a/deliverables/icehouse/openstack-doc-tools.yaml
+++ b/deliverables/icehouse/openstack-doc-tools.yaml
@@ -3,51 +3,51 @@ launchpad: openstack-doc-tools
 team: Documentation
 type: library
 releases:
-  - version: 0.1
+  - version: "0.1"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: c5097f9992e3d12179bebca469f9c0b900cb70a5
-  - version: 0.2
+  - version: "0.2"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: b323c8e30f9bd5795187312cf45ca16a793377f0
-  - version: 0.3
+  - version: "0.3"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 89d91f2d2abe9ab22101822a6dc9b7ac5c1e7ae1
-  - version: 0.4
+  - version: "0.4"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: c586091172c97021763cfc2d2fb3d1880371e097
-  - version: 0.5
+  - version: "0.5"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 131a50461b57d4e125d143591b6dd22da74173c3
-  - version: 0.6
+  - version: "0.6"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 50ba3733b1d6c0680621b1e7652ff3989f1d5e24
-  - version: 0.7
+  - version: "0.7"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 87f8c5e7f46ab7807d2db286b73aaf688a315129
-  - version: 0.7.1
+  - version: "0.7.1"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 1763efc4a38c98fa59733f9c1e8dbc9245349c7e
-  - version: 0.8
+  - version: "0.8"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: b3b96eb65ccb1c4c7d6667958555b58a461b2586
-  - version: 0.8.1
+  - version: "0.8.1"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 4604cbbcbb9053d2328dea8f11f8e4c42c699570
-  - version: 0.8.2
+  - version: "0.8.2"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 15601d407c3d3527a97077f84cce71d6fd61d8b3
-  - version: 0.9
+  - version: "0.9"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 1083e40d21d4fda3647e2d2f90f47e70de5d7345
