--- a/deliverables/icehouse/python-ceilometerclient.yaml
+++ b/deliverables/icehouse/python-ceilometerclient.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/python-ceilometerclient
         hash: defbb95855443047c3fb0a90ca4a9c9d1a51180b
+repository-settings:
+  openstack/python-ceilometerclient:
+    flags:
+      - retired
