--- a/deliverables/icehouse/python-swiftclient.yaml
+++ b/deliverables/icehouse/python-swiftclient.yaml
@@ -8,7 +8,7 @@ releases:
     projects:
       - repo: openstack/python-swiftclient
         hash: 0c7264c21d06d37de5db0beee677c4e026dc8f45
-  - version: 2.0
+  - version: "2.0"
     projects:
       - repo: openstack/python-swiftclient
         hash: 19d7e1812a99d73785146667ae2f3a7156f06898
