--- a/deliverables/icehouse/trove.yaml
+++ b/deliverables/icehouse/trove.yaml
@@ -4,7 +4,7 @@ team: trove
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.1
+  - version: "2014.1"
     projects:
       - repo: openstack/trove
         hash: 358240964f48c78bb6f9d1bf5a41d3ed08668961
