fix schema validation issues for juno
This change was generated with:

sed -i -e 's|version: \(.*\)|version: "\1"|g' deliverables/*/*.yaml

Change-Id: I77ee38765c7d01f04ab84b1b9ed0a913bd366995
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/juno/ceilometer.yaml
+++ b/deliverables/juno/ceilometer.yaml
@@ -4,23 +4,23 @@ team: Telemetry
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.2
+  - version: "2014.2"
     projects:
       - repo: openstack/ceilometer
         hash: 94579bfc81b820380d03703e4e2311b3bd25c022
-  - version: 2014.2.1
+  - version: "2014.2.1"
     projects:
       - repo: openstack/ceilometer
         hash: 1129b7013359bf242a2ea53be9d4faeccfbfac5a
-  - version: 2014.2.2
+  - version: "2014.2.2"
     projects:
       - repo: openstack/ceilometer
         hash: e8380ba90f29189ffbcee35c8a069b4882a98a99
-  - version: 2014.2.3
+  - version: "2014.2.3"
     projects:
       - repo: openstack/ceilometer
         hash: 720c2b4915caf5decd3da91ea2d6e6291316b940
-  - version: 2014.2.4
+  - version: "2014.2.4"
     projects:
       - repo: openstack/ceilometer
         hash: 6b66124327f31688565d12152b0d47bf21c81737
