--- a/deliverables/juno/cinder.yaml
+++ b/deliverables/juno/cinder.yaml
@@ -4,23 +4,23 @@ team: cinder
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.2
+  - version: "2014.2"
     projects:
       - repo: openstack/cinder
         hash: be3d4604dc0566e0838959d998ff1d37755de6d3
-  - version: 2014.2.1
+  - version: "2014.2.1"
     projects:
       - repo: openstack/cinder
         hash: b48aee211ad9b2571c8554dd162b37b8a8d80a42
-  - version: 2014.2.2
+  - version: "2014.2.2"
     projects:
       - repo: openstack/cinder
         hash: 532b82059fe16678da7f7ed10d2f862ff1d2e9ea
-  - version: 2014.2.3
+  - version: "2014.2.3"
     projects:
       - repo: openstack/cinder
         hash: 48c792513fd342a5f82122b12e4ed2afd0de2ae7
-  - version: 2014.2.4
+  - version: "2014.2.4"
     projects:
       - repo: openstack/cinder
         hash: f7d2a64ac3562060b54b0d1e43a00a8892bafa52
