--- a/deliverables/juno/glance.yaml
+++ b/deliverables/juno/glance.yaml
@@ -4,23 +4,23 @@ team: glance
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.2
+  - version: "2014.2"
     projects:
       - repo: openstack/glance
         hash: 742c898956d655affa7351505c8a3a5c72881eae
-  - version: 2014.2.1
+  - version: "2014.2.1"
     projects:
       - repo: openstack/glance
         hash: 055adff1d95dca72074da898b541cb4a6b62406d
-  - version: 2014.2.2
+  - version: "2014.2.2"
     projects:
       - repo: openstack/glance
         hash: cd42a98b61c288b731b5a89fe2e4a8d2e59b93a9
-  - version: 2014.2.3
+  - version: "2014.2.3"
     projects:
       - repo: openstack/glance
         hash: 1db07bd8c07bbcde4bd267985c4e3961c22b990e
-  - version: 2014.2.4
+  - version: "2014.2.4"
     projects:
       - repo: openstack/glance
         hash: fdf65d26b4f2212d9db387921f8adad2af561acb
