--- a/deliverables/juno/keystone.yaml
+++ b/deliverables/juno/keystone.yaml
@@ -4,23 +4,23 @@ team: keystone
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2014.2
+  - version: "2014.2"
     projects:
       - repo: openstack/keystone
         hash: ef8d9aa4e1ca3b5465a5bba0cdb6dcb9be1fe9ca
-  - version: 2014.2.1
+  - version: "2014.2.1"
     projects:
       - repo: openstack/keystone
         hash: 615f79bb97883eee76923527cea13c2f72baa7ff
-  - version: 2014.2.2
+  - version: "2014.2.2"
     projects:
       - repo: openstack/keystone
         hash: e400354ba807cfa2feac4fa8559f195c88b397e0
-  - version: 2014.2.3
+  - version: "2014.2.3"
     projects:
       - repo: openstack/keystone
         hash: 91a33875385ca296d24f67d4ef9629a2b33bed99
-  - version: 2014.2.4
+  - version: "2014.2.4"
     projects:
       - repo: openstack/keystone
         hash: 1a3365bfa5dbef73a7e9a43fa1af8caf2b65f405
