--- a/deliverables/juno/openstack-doc-tools.yaml
+++ b/deliverables/juno/openstack-doc-tools.yaml
@@ -3,51 +3,51 @@ launchpad: openstack-doc-tools
 team: Documentation
 type: library
 releases:
-  - version: '0.11'
+  - version: "0.11"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 38632366024762c626e0697a8a42b93d64913b9a
-  - version: '0.12'
+  - version: "0.12"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 6659c8043587b212607cf38b9366a218cd0139c4
-  - version: '0.13'
+  - version: "0.13"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: a8cb0407d86636c59465eac98f5d7f50e1655093
-  - version: '0.14'
+  - version: "0.14"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 8618b9aeb7d20a09bec32bf856faa6950bd9b26e
-  - version: '0.15'
+  - version: "0.15"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 2af6041d179b26976d539a3439eafdcb65a6df1e
-  - version: '0.16'
+  - version: "0.16"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: ca4b24b3960f79741fb011c78d67cf88e0559ee0
-  - version: 0.16.1
+  - version: "0.16.1"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 4a4da3e263c8b040249ffdd76e5285c3e8429557
-  - version: '0.17'
+  - version: "0.17"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 6958e7aaed21dd7ede795e6044dfe0c1491b98b4
-  - version: '0.18'
+  - version: "0.18"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: f8d8886cc08f485c06869f5fdf7788a510fc8f17
-  - version: 0.18.1
+  - version: "0.18.1"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: edb4ff499811f1c23de136025f96cc032037474f
-  - version: '0.19'
+  - version: "0.19"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 20139677b35f3580097891c1c2ea63cb31f1de76
-  - version: '0.20'
+  - version: "0.20"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 4906d5018d19439c99f304724f1c06ddfa1d0f7d
