--- a/deliverables/juno/oslo.config.yaml
+++ b/deliverables/juno/oslo.config.yaml
@@ -4,7 +4,7 @@ team: oslo
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 1.4.0
+  - version: "1.4.0"
     projects:
       - repo: openstack/oslo.config
         hash: 059579ac2189b94bc9e9555b2e9acfb31a83ef53
