--- a/deliverables/juno/oslo.i18n.yaml
+++ b/deliverables/juno/oslo.i18n.yaml
@@ -4,7 +4,7 @@ team: oslo
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 1.0.0
+  - version: "1.0.0"
     projects:
       - repo: openstack/oslo.i18n
         hash: 040f1d6afa733527385d2309e485bf37e9843b0e
