--- a/deliverables/juno/oslo.serialization.yaml
+++ b/deliverables/juno/oslo.serialization.yaml
@@ -4,7 +4,7 @@ team: oslo
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 1.0.0
+  - version: "1.0.0"
     projects:
       - repo: openstack/oslo.serialization
         hash: 80fec894a54253d9b4c80dd8a563957966ca0b88
