--- a/deliverables/juno/oslosphinx.yaml
+++ b/deliverables/juno/oslosphinx.yaml
@@ -4,7 +4,7 @@ team: oslo
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 2.2.0
+  - version: "2.2.0"
     projects:
       - repo: openstack/oslosphinx
         hash: 98c8c4b8ad297d1fb2269da14ad6ea7009349aeb
