--- a/deliverables/juno/python-barbicanclient.yaml
+++ b/deliverables/juno/python-barbicanclient.yaml
@@ -4,11 +4,11 @@ team: barbican
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 2.2.0
+  - version: "2.2.0"
     projects:
       - repo: openstack/python-barbicanclient
         hash: fd01494d56bd84d1562d24459aa443e27153e227
-  - version: 2.2.1
+  - version: "2.2.1"
     projects:
       - repo: openstack/python-barbicanclient
         hash: ac30643631b6bc1c40116061f8eb280a7881e422
