--- a/deliverables/juno/python-cliff.yaml
+++ b/deliverables/juno/python-cliff.yaml
@@ -2,7 +2,7 @@
 launchpad: python-cliff
 team: OpenStackClient
 releases:
-  - version: 1.7.0
+  - version: "1.7.0"
     projects:
       - repo: openstack/cliff
         hash: 42675b2d7ad93f4bba9c4216874c68b8e5834147
