--- a/deliverables/juno/python-designateclient.yaml
+++ b/deliverables/juno/python-designateclient.yaml
@@ -4,7 +4,7 @@ team: designate
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 1.1.0
+  - version: "1.1.0"
     projects:
       - repo: openstack/python-designateclient
         hash: a900b41e4d8a9eb40e1812295ba16d773e2b9618
