--- a/deliverables/juno/python-heatclient.yaml
+++ b/deliverables/juno/python-heatclient.yaml
@@ -4,15 +4,15 @@ team: heat
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.2.10
+  - version: "0.2.10"
     projects:
       - repo: openstack/python-heatclient
         hash: 6630554476e12bfff427016aab6aedb4eaa2f2c6
-  - version: 0.2.11
+  - version: "0.2.11"
     projects:
       - repo: openstack/python-heatclient
         hash: 87bef60d09736d1b83d87723ba4826dc14d09f69
-  - version: 0.2.12
+  - version: "0.2.12"
     projects:
       - repo: openstack/python-heatclient
         hash: 6089d31e302d80910cc15132f99a1bf358bbb64f
