--- a/deliverables/juno/python-ironicclient.yaml
+++ b/deliverables/juno/python-ironicclient.yaml
@@ -4,27 +4,27 @@ team: ironic
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.1.4
+  - version: "0.1.4"
     projects:
       - repo: openstack/python-ironicclient
         hash: 7183512cbc58832d8d50d6d33852522736126126
-  - version: 0.1.5
+  - version: "0.1.5"
     projects:
       - repo: openstack/python-ironicclient
         hash: f0402709fbfaf2c6df67efc4865b8b6c9081457d
-  - version: 0.2.0
+  - version: "0.2.0"
     projects:
       - repo: openstack/python-ironicclient
         hash: f0402709fbfaf2c6df67efc4865b8b6c9081457d
-  - version: 0.2.1
+  - version: "0.2.1"
     projects:
       - repo: openstack/python-ironicclient
         hash: 8160da5b3b7252cbead915ecbb375eb6c83481bc
-  - version: 0.3.0
+  - version: "0.3.0"
     projects:
       - repo: openstack/python-ironicclient
         hash: 727800dcae54b333811c22f6f3420753d6fd4879
-  - version: 0.3.1
+  - version: "0.3.1"
     projects:
       - repo: openstack/python-ironicclient
         hash: e611ae5f206d846e72684ba16c345653232c45c3
