--- a/deliverables/juno/python-saharaclient.yaml
+++ b/deliverables/juno/python-saharaclient.yaml
@@ -4,19 +4,19 @@ team: sahara
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.7.1
+  - version: "0.7.1"
     projects:
       - repo: openstack/python-saharaclient
         hash: 1625d6851efbb3545b5915b4a87ef4948e405534
-  - version: 0.7.2
+  - version: "0.7.2"
     projects:
       - repo: openstack/python-saharaclient
         hash: 5be2179d8c5c1e806537849559bea52a1145028f
-  - version: 0.7.3
+  - version: "0.7.3"
     projects:
       - repo: openstack/python-saharaclient
         hash: 7db47c1151b93c9f8b90de5b6b2b32465c0ec336
-  - version: 0.7.4
+  - version: "0.7.4"
     projects:
       - repo: openstack/python-saharaclient
         hash: ccec5b71edefe27b91ea461804767b2b17bd22a3
