--- a/deliverables/juno/python-swiftclient.yaml
+++ b/deliverables/juno/python-swiftclient.yaml
@@ -4,23 +4,23 @@ team: swift
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 2.1.0
+  - version: "2.1.0"
     projects:
       - repo: openstack/python-swiftclient
         hash: 258420f41049d92fc0b59b9263c8381bfe513432
-  - version: 2.2.0
+  - version: "2.2.0"
     projects:
       - repo: openstack/python-swiftclient
         hash: 394cb57f630b3dfdc1d5b2e172ef0f1c16b8211f
-  - version: 2.3.0
+  - version: "2.3.0"
     projects:
       - repo: openstack/python-swiftclient
         hash: 45465c70e31764167b43fe342c38231a3e0b825c
-  - version: 2.3.1
+  - version: "2.3.1"
     projects:
       - repo: openstack/python-swiftclient
         hash: bb4d2ab59c4de9389667eeed255642f51e276f1e
-  - version: 2.3.2
+  - version: "2.3.2"
     projects:
       - repo: openstack/python-swiftclient
         hash: 0289a61f6271281f7af616faf6fbcf8ca47df0d5
