--- a/deliverables/juno/python-troveclient.yaml
+++ b/deliverables/juno/python-troveclient.yaml
@@ -4,11 +4,11 @@ team: trove
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 1.0.6
+  - version: "1.0.6"
     projects:
       - repo: openstack/python-troveclient
         hash: 33c76fab16b80f32a04f83e1653d4f809c22d3bd
-  - version: 1.0.7
+  - version: "1.0.7"
     projects:
       - repo: openstack/python-troveclient
         hash: e010a919750f07493afd42a4db867853b925bcbf
