--- a/deliverables/juno/os-client-config.yaml
+++ b/deliverables/juno/os-client-config.yaml
@@ -4,11 +4,11 @@ team: OpenStackClient
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.1.0
+  - version: "0.1.0"
     projects:
       - repo: openstack/os-client-config
         hash: 69d2a3e0ad97a20cec498ab87c81af5e11e5c79c
-  - version: 0.2.0
+  - version: "0.2.0"
     projects:
       - repo: openstack/os-client-config
         hash: 0287e7cc4bfcafad919a7ab1decfa8e3707bda82
