--- a/deliverables/juno/oslo.rootwrap.yaml
+++ b/deliverables/juno/oslo.rootwrap.yaml
@@ -4,7 +4,7 @@ team: oslo
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 1.3.0
+  - version: "1.3.0"
     projects:
       - repo: openstack/oslo.rootwrap
         hash: 8c68df850ab4c7984885503393f6be8bf6461ba1
