--- a/deliverables/juno/oslotest.yaml
+++ b/deliverables/juno/oslotest.yaml
@@ -4,11 +4,11 @@ team: oslo
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 1.1.0
+  - version: "1.1.0"
     projects:
       - repo: openstack/oslotest
         hash: bbfde1e29c72ee7f90b2982e29b47cd2e1574d6d
-  - version: 1.3.1
+  - version: "1.3.1"
     projects:
       - repo: openstack/oslotest
         hash: 7438de326614bc13e0acc56beac693b72a0b2411
